Crash when scaling bones #57096

Closed
opened 2018-10-08 08:28:03 +02:00 by Artem · 7 comments

System Information
Windows 10 Pro 64-bit, GeForce GT 630
Operating system and graphics card

Blender Version
Date: 2018-10-03 23:37
Hash: 3c8c1841d7
Branch: Blender 2.8

Short description of error
When i scale multiple bones (Ctrl+ Alt + S) Blender is crashing.

Exact steps for others to reproduce the error

  1. Press "S" - scale to smaller

  2. Ctrl + Alt + S - scale to smaller

  3. Shift + D - dublicate and press Esc without moving

  4. Press "S" - scale to bigger

  5. Ctrl + Alt + S - scale to bigger

  6. Crash

File scene: tmp2.blend

**System Information** Windows 10 Pro 64-bit, GeForce GT 630 Operating system and graphics card **Blender Version** Date: 2018-10-03 23:37 Hash: 3c8c1841d72 Branch: Blender 2.8 **Short description of error** When i scale multiple bones (Ctrl+ Alt + S) Blender is crashing. **Exact steps for others to reproduce the error** 1. Press "S" - scale to smaller 2. Ctrl + Alt + S - scale to smaller 3. Shift + D - dublicate and press Esc without moving 4. Press "S" - scale to bigger 5. Ctrl + Alt + S - scale to bigger 6. Crash File scene: [tmp2.blend](https://archive.blender.org/developer/F4984700/tmp2.blend)
Author

Added subscriber: @florentine3d

Added subscriber: @florentine3d
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2018-10-08 11:57:34 +02:00
Member

Can confirm the crash:

1  count_set_pose_transflags transform_conversions.c 795  0x1bc0934 
2  special_aftertrans_update transform_conversions.c 6715 0x1bdabdb 
3  transformEnd              transform.c             2674 0x1b91c7e 
4  transform_modal           transform_ops.c         417  0x1bf30bf 

pchan->bone is NULL, will have a look...

(note: goes fine if you leave edit mode after duplication and reenter prior to Ctrl + Alt + S )

Can confirm the crash: ``` 1 count_set_pose_transflags transform_conversions.c 795 0x1bc0934 2 special_aftertrans_update transform_conversions.c 6715 0x1bdabdb 3 transformEnd transform.c 2674 0x1b91c7e 4 transform_modal transform_ops.c 417 0x1bf30bf ``` pchan->bone is NULL, will have a look... (note: goes fine if you leave edit mode after duplication and reenter prior to Ctrl + Alt + S )
Member

Added subscriber: @brecht

Added subscriber: @brecht
Member

found these comments here

/* XXX pchan->bone may be NULL for duplicated bones, see duplicateEditBoneObjects() comment .. Skip in this case too! */

and here

/* WARNING: this creates a new posechannel, but there will not be an attached bone yet as the new bones created here are still 'EditBones' not 'Bones'. */

So I think similar workaround (just skip if NULL) will also solve this bug? Maybe @brecht could check D3777?

(still thinking why we go through the pose stuff in edit mode though, but thats for later...)

found these comments [here ](https://developer.blender.org/diffusion/B/browse/blender2.8/source/blender/blenkernel/intern/armature.c;d12e7818104d01af2bec39cec430456a32d6b69c$2545) > /* XXX pchan->bone may be NULL for duplicated bones, see duplicateEditBoneObjects() comment .. Skip in this case too! */ and [here ](https://developer.blender.org/diffusion/B/browse/blender2.8/source/blender/editors/armature/armature_add.c;d12e7818104d01af2bec39cec430456a32d6b69c$464) > /* WARNING: this creates a new posechannel, but there will not be an attached bone yet as the new bones created here are still 'EditBones' not 'Bones'. */ So I think similar workaround (just skip if NULL) will also solve this bug? Maybe @brecht could check [D3777](https://archive.blender.org/developer/D3777)? (still thinking why we go through the **pose** stuff in **edit** mode though, but thats for later...)

This issue was referenced by e6adf9ac9a

This issue was referenced by e6adf9ac9a32f0c9b9690fef1b9066e030683a45
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57096
No description provided.