Fix T57096: Crash when scaling bones

Reviewed By: brecht

Differential Revision: https://developer.blender.org/D3777